[package]
name = "libp2p-webrtc-direct"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Anton Kaliaev <anton.kalyaev@gmail.com>"]
description = "WebRTC transport for libp2p"
repository = "https://github.com/paritytech/libp2p-webrtc-direct"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1"
anyhow = "1.0.56"
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
ctrlc = "3.2.1"
either = "1.5.3"
env_logger = "0.9.0"
futures = "0.3.17"
futures-rustls = "0.22"
libp2p-core = { version = "0.32.0", default-features = false  }
log = "0.4.14"
quicksink = "0.1"
rcgen = "0.8.14"
rustls = "0.19.0"
rustls-pemfile = "0.3.0"
rw-stream-sink = "0.2.0"
tokio = { version = "1.17.0", default-features = false, features = ["net"] }
url = "2.1"
webpki-roots = "0.22"
webrtc = { version = "0.4.0", git = "https://github.com/melekes/webrtc", branch = "anton/168-allow-persistent-certificates" }
webrtc-dtls = "0.5.2"
webrtc-ice = "0.6.6"
